Try forcibly clipping the height of slidshow container, to avoid image spillover

--- a/app/assets/stylesheets/new/new_slideshow.css.scss
+++ b/app/assets/stylesheets/new/new_slideshow.css.scss
@@ -6,6 +6,8 @@
         padding-top: 10px;
     }
     z-index: 1;
+    max-height: 460px; // curb the unsightliness of initial-load image-queue spillover
+    overflow: hidden;
 
     .slideshow-header {
         height: 30px;
